<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LabourSignUp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/LabourSignUp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/construction_worker"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/labour_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Enter your Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/labour_location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Enter your location"
        android:inputType="text" />

    <EditText
        android:id="@+id/enter_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="phone" />

    <Button
        android:id="@+id/send1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send1" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/verification_code"
        android:inputType="number"
        android:visibility="invisible" />

    <Button
        android:id="@+id/send2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send2"
        android:visibility="invisible" />

</LinearLayout>